@startuml
'https://plantuml.com/class-diagram

abstract class Geometry {
    +check(): boolean
    +circumference(): double
    +area(): double
}

class Triangle {
    -a: double
    -b: double
    -c: double
    +Triangle(a: double, b: double, c: double)
}

class Circle {
    -radius: double
    +Circle(radius: double)
}

Circle --|> Geometry
Triangle --|> Geometry

@enduml